--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -99,7 +99,7 @@ status-website:
   navbar:
     - title: Back to the MasterStream
       href: https://masterstream.ir
-  introMessage: در این صفحه تمام سرورهای مستراستریم، جهت سرویس دهی به کاربران مستراستریم را مشاهده میکنید، تمامی پینگ ها جهت بررسی در دسترس بودن سرورها در اینترنت می باشد که تمامی ارتباطات بااتصال به آمریکا مورد بررسی قرار میگیرد.
+  introMessage: در این صفحه، تمام سرورهای مستراستریم جهت سرویس دهی به کاربران را مشاهده میکنید. همچنین تست پینگ سرورها از آمریکا انجام میشود و میزان در دسترس بودن سرورها در اینترنت را نمایش میدهد.
 
 i18n:
   footer: <a href="https://masterstream.ir" target="_blank">MasterStream.iR</a>
